--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://github.com/Nhancoding/Portfolio",
+  "homepage": "https://Nhancoding.github.io/Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
